# Dissertation

./: CMakeLists.txt  README.md  run.ipynb
include/client/: client_hello.hpp
include/client/clients/: FileClient.hpp  MsgQueueClient.hpp  PipeClient.hpp  ShmClient.hpp  SocketClient.hpp
include/client/socket/: SocketClient.hpp
include/client/utils/: Defines.hpp  Timer.hpp
include/server/: server_hello.hpp
include/server/servers/: FileServer.hpp  MsgQueueServer.hpp  PipeServer.hpp  ShmServer.hpp  SocketServer.hpp
include/server/socket/: SocketServer.hpp
include/utils/: Defines.hpp  Json.hpp  Thread.hpp  Timer.hpp
src/client/: main.cpp
src/client/clients/: FileClient.cpp  MsgQueueClient.cpp  PipeClient.cpp  ShmClient.cpp  SocketClient.cpp
src/client/socket/: SocketClient.cpp
src/client/utils/: Timer.cpp
src/server/: main.cpp
src/server/servers/: FileServer.cpp  MsgQueueServer.cpp  PipeServer.cpp  ShmServer.cpp  SocketServer.cpp
src/server/socket/: SocketServer.cpp
src/utils/: Timer.cpp
